# rust-postgres

./: Cargo.toml  index.html
doc/: search-index.js
doc/postgres/: enum.PostgresConnectTarget.html  enum.SslMode.html  fn.cancel_query.html  index.html  struct.DefaultNoticeHandler.html  struct.PostgresCancelData.html  struct.PostgresConnectParams.html  struct.PostgresConnection.html  struct.PostgresLazyRows.html  struct.PostgresNotification.html  struct.PostgresNotifications.html  struct.PostgresRow.html  struct.PostgresRows.html  struct.PostgresStatement.html  struct.PostgresTransaction.html  struct.ResultDescription.html  trait.IntoConnectParams.html  trait.PostgresNoticeHandler.html  trait.RowIndex.html  type.PostgresConnectTarget.html  type.PostgresResult.html  type.SslMode.html  typedef.PostgresResult.html
doc/postgres/error/: enum.PostgresConnectError.html  enum.PostgresError.html  enum.PostgresErrorPosition.html  enum.PostgresSqlState.html  index.html  struct.PostgresDbError.html  (+4 more)
doc/rust-postgres/: enum.SslMode.html  fn.cancel_query.html  index.html  search-index.js  struct.DefaultNoticeHandler.html  struct.NormalPostgresStatement.html  struct.PostgresCancelData.html  struct.PostgresConnection.html  struct.PostgresNotification.html  struct.PostgresNotificationIterator.html  struct.PostgresResult.html  struct.PostgresRow.html  struct.PostgresTransaction.html  struct.ResultDescription.html  struct.TransactionalPostgresStatement.html  trait.PostgresNoticeHandler.html  trait.PostgresStatement.html  trait.RowIndex.html
src/: lib.rs
tests/: test.rs
(+86 files in other folders)
