[package]
name = "postgres"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "A native PostgreSQL driver"
repository = "https://github.com/sfackler/rust-postgres"
documentation = "https://sfackler.github.io/doc/postgres"
readme = "README.md"
keywords = ["database", "sql"]

[lib]
name = "postgres"
path = "src/lib.rs"
test = false
bench = false

[[test]]
name = "test"
path = "tests/test.rs"

[features]
default = ["uuid"]

[dependencies.phf]
git = "https://github.com/sfackler/rust-phf"
[dependencies.phf_mac]
git = "https://github.com/sfackler/rust-phf"
[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl"

[dependencies.uuid]
optional = true
version = "0.1"
git = "https://github.com/rust-lang/uuid"

[dependencies.time]
version = "0.1"
git = "https://github.com/rust-lang/time"

[dev-dependencies]
url = "0.2"

